--- a/src/styles/diagram.scss
+++ b/src/styles/diagram.scss
@@ -1,5 +1,33 @@
-.provider-container{
-    display: flex;
-    width: 140px;
-    height: 40px;
+.provider-container {
+  display: flex;
+  width: 120px;
+  height: 60px;
+  flex-direction: column;
+  justify-content: center;
+}
+.providers {
+  border-right: 3px solid black;
+  width: 120px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  @include for-large-down {
+    border-right: none;
+    border-top: 3px solid black;
+    flex-direction: row;
+    width: 400px;
+  }
+}
+.radio {
+  display: inline;
+  margin: 0 4px;
+  @include for-large-down {
+    display: block;
+  }
+}
+.provider-container {
+  &:nth-child(odd) {
+    background-color: gray;
+  }
 }
