--- a/src/styles/spinner.scss
+++ b/src/styles/spinner.scss
@@ -1,3 +1,9 @@
-.amount-info{
-    display: block;
+.amount-info {
+  display: block;
+}
+.spin {
+  width: 150px;
+}
+.spinner {
+  width: auto;
 }
